--- a/templates/terms.html
+++ b/templates/terms.html
@@ -46,7 +46,7 @@
         <div class="site-mobile-menu-close mt-3">
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
-      </div> class="h5"
+      </div>
       <div class="site-mobile-menu-body"></div>
     </div> <!-- .site-mobile-menu -->
 
