--- a/templates/contact.html
+++ b/templates/contact.html
@@ -165,9 +165,9 @@
               <p class="text-white-50"> <a class="text-success" href="mailto:mazinabbayo@gmail.com">mazinabbayo@gmail.com</a></p>
               <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
               <div class="d-flex">
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" style='padding:0.375rem 0.75rem' href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.70rem' href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.84rem' href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
       </div>
