--- a/templates/detail.html
+++ b/templates/detail.html
@@ -86,11 +86,11 @@
             {% comment %} <h1 class="mb-2">{{house.region}} - {{house.pk}}</h1> {% endcomment %}
             {% if house.for_rent%}
             <p class="mb-3 mt-4"><strong class="h2 text-light">سعر الايجار : </strong>
-            <strong class="h2 text-success font-weight-bold">{{house.price|intcomma}}</strong></p>
+            <strong class="h2 text-success font-weight-bold">{{house.price|intcomma}} ج.س</strong></p>
             {% endif %}
             {% if house.for_sale%}
             <p class="mb-5"><strong class="h2 text-light ">سعر البيع : </strong>
-            <strong class="h2 text-success font-weight-bold">{{house.sale_price|intcomma}}</strong></p>
+            <strong class="h2 text-success font-weight-bold">{{house.sale_price|intcomma}} ج.س</strong></p>
             {% endif %}
           </div>
         </div>
@@ -106,11 +106,11 @@
                 <div class="col-md-6" style="text-align:right;">
                     {% if house.for_rent%}
                     <p><strong class="h5">سعر الايجار : </strong>
-                    <strong class="text-success h5 font-weight-bold">{{house.price|intcomma}}</strong></p>
+                    <strong class="text-success h5 font-weight-bold">{{house.price|intcomma}} ج.س</strong></p>
                     {% endif %}
                     {% if house.for_sale%}
                     <p><strong class="h5">سعر البيع : </strong>
-                    <strong class="text-success h5 font-weight-bold">{{house.sale_price|intcomma}}</strong></p>
+                    <strong class="text-success h5 font-weight-bold">{{house.sale_price|intcomma}} ج.س</strong></p>
                     {% endif %}
                     <p><strong class="h5">الموقع  : </strong>
                     <strong class="text-success h5 font-weight-bold">{{house.region.name}}</strong></p>
@@ -240,9 +240,9 @@
               <p class="text-white-50"> <a class="text-success" href="mailto:mazinabbayo@gmail.com">mazinabbayo@gmail.com</a></p>
               <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
               <div class="d-flex">
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" style='padding:0.375rem 0.75rem' href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.70rem' href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.84rem' href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
       </div>
