--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
                 <label class="text-light"style="font-size:16px;">نطاق السعر</label>
                 <div class="select-wrap"id="prices">
                   <select name="price-range" class="custom-select form-control ">
-                    <option style="1" value="">100,000  - 400,000</option>
+                    <option value="1">100,000  - 400,000</option>
                     <option value="2">400,000 - 700,000</option>
                     <option value="3">700,000 - 1,000,000</option>
                     <option value="4">1,000,000 - 1,300,000</option>
@@ -256,11 +256,11 @@
                 <span 
                 {% if house.for_rent%}
                   <p><strong>سعر الايجار : </strong>
-                  <strong class="text-success font-weight-bold">{{house.price|intcomma}}</strong></p>
+                  <strong class="text-success font-weight-bold">{{house.price|intcomma}} ج.س</strong></p>
                   {% endif %}
                   {% if house.for_sale%}
                   <p><strong>سعر البيع : </strong>
-                  <strong class="text-success font-weight-bold">{{house.sale_price|intcomma}}</strong></p>
+                  <strong class="text-success font-weight-bold">{{house.sale_price|intcomma}} ج.س</strong></p>
                 {% endif %}
                 <ul class="property-specs-wrap mb-3 mb-lg-0">
                   {% comment %} <li>
@@ -351,9 +351,9 @@
               <p class="text-white-50"> <a class="text-success" href="mailto:mazinabbayo@gmail.com">mazinabbayo@gmail.com</a></p>
               <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
               <div class="d-flex">
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" style='padding:0.375rem 0.75rem' href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.70rem' href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.84rem' href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
       </div>
