--- a/templates/search.html
+++ b/templates/search.html
@@ -88,6 +88,82 @@
           </div>
         </div>
       </div> 
+      <div class="site-section site-section-sm pb-0">
+        <div class="container">
+          <div class="row"dir="rtl">
+            <form action = "{% url "api:search" %}" method = "POST" class="form-search col-md-12" style="margin-top: -100px;">
+              {% csrf_token %}
+              {% comment %} <div class="text-center text-light mb-4">
+                <h2 class="fw-bold " >
+                  ابحث عن العقار المناسب
+                </h2>
+                <p class="text-light" style="font-size: 18px;">
+                  اختر من الخيارات أدناه للحصول على العقار الذي يناسب احتياجاتك 
+                </p>
+              </div> {% endcomment %}
+              <div class="row  align-items-end">
+                <div class="col-md-3 pt-3"style = "text-align:right;">
+                  <label class="text-light"style="font-size:16px;">نوع العقار</label>
+                  <div class="select-wrap">
+                    <select name="is_ready" class="custom-select form-control ">
+                      <option value="1" {% if is_ready == "1" %}selected{% endif %}>سكني</option>
+                      <option value="2" {% if is_ready == "2" %}selected{% endif %}>تجاري</option>
+                      <option value="3" {% if is_ready == "3" %}selected{% endif %}>زراعي</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-3 pt-3"style = "text-align:right;">
+                  <label class="text-light" style="font-size:16px;">نوع العرض</label>
+                  <div class="select-wrap">
+                    <select name="offer-types" id="offer-types" class="custom-select form-control">
+                      <option value="rent" {% if offer_type == "rent" %}selected{% endif %}>ايجار</option>
+                      <option value="sale" {% if offer_type == "sale" %}selected{% endif %}>بيع</option>
+                    </select>
+                  </div>
+                </div>
+                
+                <div class="col-md-3 pt-3"style = "text-align:right;">
+                  <label class="text-light"style="font-size:16px;">الحي او المنطقه</label>
+                  <div class="select-wrap">
+                    <select name="select-region" class="custom-select form-control ">
+                    {% for region in regions %}
+                    <option value="{{ region.pk }}" {% if region.pk|stringformat:"s" == region_id %}selected{% endif %}>{{ region.name }}</option>
+                    {% endfor %}
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-3 pt-3"style = "text-align:right;">
+                  <label class="text-light"style="font-size:16px;">نطاق السعر</label>
+                  <div class="select-wrap"id="prices">
+                    <select name="price-range" class="custom-select form-control ">
+                      <option value="1" {% if price_range == "1" %}selected{% endif %}>100,000  - 400,000</option>
+                      <option value="2" {% if price_range == "2" %}selected{% endif %}>400,000 - 700,000</option>
+                      <option value="3" {% if price_range == "3" %}selected{% endif %}>700,000 - 1,000,000</option>
+                      <option value="4" {% if price_range == "4" %}selected{% endif %}>1,000,000 - 1,300,000</option>
+                      <option value="5" {% if price_range == "5" %}selected{% endif %}>1,300,000 - 1,600,000</option>
+                      <option value="6" {% if price_range == "6" %}selected{% endif %}>1,600,000 - 1,900,000</option>
+                      <option value="7" {% if price_range == "7" %}selected{% endif %}>1,900,000 - 2,200,000</option>
+                      <select name="price-range" class="custom-select form-control">
+                        <option value="8" {% if price_range == "8" %}selected{% endif %}>1,000,000 - 10,000,000 </option>
+                        <option value="9" {% if price_range == "9" %}selected{% endif %}>10,000,000 - 40,000,000</option>
+                        <option value="10" {% if price_range == "10" %}selected{% endif %}>40,000,000 - 70,000,000</option>
+                        <option value="11" {% if price_range == "11" %}selected{% endif %}>70,000,000 - 100,000,000</option>
+                        <option value="12" {% if price_range == "12" %}selected{% endif %}>100,000,000 - 130,000,000</option>
+                        <option value="13" {% if price_range == "13" %}selected{% endif %}>130,000,000 - 160,000,000</option>
+                        <option value="14" {% if price_range == "14" %}selected{% endif %}>160,000,000 - 190,000,000</option>
+                          
+                      
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-3 pt-4">
+                  <input type="submit" style="font-size:21px;" class="btn btn-success text-white btn-block  rounded" value="بحث">
+                </div>
+              </div>
+            </form>
+          </div> 
+        </div> 
+      </div> 
 
 
         
@@ -229,9 +305,9 @@
               <p class="text-white-50"> <a class="text-success" href="mailto:mazinabbayo@gmail.com">mazinabbayo@gmail.com</a></p>
               <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
               <div class="d-flex">
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" style='padding:0.375rem 0.75rem' href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.70rem' href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle"style='padding:0.375rem 0.84rem' href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
       </div>
@@ -267,6 +343,83 @@
   {% comment %} <script src="{% static "js/circleaudioplayer.js" %}"></script> {% endcomment %}
 
   <script src="{% static "js/main.js" %}"></script>
+  
+  <script>
     
+
+    const selectElement = document.getElementById('offer-types');
+    const greetingParagraph = document.getElementById('prices');
+  
+      var slected = selectElement.options[selectElement.selectedIndex].text;
+      const price_range = "{{ price_range }}";
+
+      if(slected ==="ايجار"){
+      greetingParagraph.innerHTML = `<select name="price-range" class="custom-select form-control">
+        <option value="1" ${price_range === "1" ? "selected" : ""}>100,000 - 400,000</option>
+        <option value="2" ${price_range === "2" ? "selected" : ""}>400,000 - 700,000</option>
+        <option value="3" ${price_range === "3" ? "selected" : ""}>700,000 - 1,000,000</option>
+        <option value="4" ${price_range === "4" ? "selected" : ""}>1,000,000 - 1,300,000</option>
+        <option value="5" ${price_range === "5" ? "selected" : ""}>1,300,000 - 1,600,000</option>
+        <option value="6" ${price_range === "6" ? "selected" : ""}>1,600,000 - 1,900,000</option>
+        <option value="7" ${price_range === "7" ? "selected" : ""}>1,900,000 - 2,200,000</option>
+      </select>`; }
+      else{
+      greetingParagraph.innerHTML = `<select name="price-range" class="custom-select form-control">
+        <option value="8" ${price_range === "8" ? "selected" : ""}>1,000,000 - 10,000,000</option>
+        <option value="9" ${price_range === "9" ? "selected" : ""}>10,000,000 - 40,000,000</option>
+        <option value="10" ${price_range === "10" ? "selected" : ""}>40,000,000 - 70,000,000</option>
+        <option value="11" ${price_range === "11" ? "selected" : ""}>70,000,000 - 100,000,000</option>
+        <option value="12" ${price_range === "12" ? "selected" : ""}>100,000,000 - 130,000,000</option>
+        <option value="13" ${price_range === "13" ? "selected" : ""}>130,000,000 - 160,000,000</option>
+        <option value="14" ${price_range === "14" ? "selected" : ""}>160,000,000 - 190,000,000</option>
+      </select>`;
+      }
+      
+
+    selectElement.addEventListener('change', function() {
+
+      var slected = selectElement.options[selectElement.selectedIndex].text;
+
+      if(slected ==="ايجار"){
+      greetingParagraph.innerHTML = `<select name="price-range" class="custom-select form-control ">
+        <option value="1">100,000  - 400,000</option>
+        <option value="2">400,000 - 700,000</option>
+        <option value="3">700,000 - 1,000,000</option>
+        <option value="4">1,000,000 - 1,300,000</option>
+        <option value="5">1,300,000 - 1,600,000</option>
+        <option value="6">1,600,000 - 1,900,000</option>
+        <option value="7">1,900,000 - 2,200,000</option>
+            
+        
+      </select>`; }
+      else{
+      greetingParagraph.innerHTML = `<select name="price-range" class="custom-select form-control">
+      <option value="8">1,000,000 - 10,000,000</option>
+      <option value="9">10,000,000 - 40,000,000</option>
+      <option value="10">40,000,000 - 70,000,000</option>
+      <option value="11">70,000,000 - 100,000,000</option>
+      <option value="12">100,000,000 - 130,000,000</option>
+      <option value="13">130,000,000 - 160,000,000</option>
+      <option value="14">160,000,000 - 190,000,000</option>`;
+      }
+    });
+
+    window.addEventListener('DOMContentLoaded', function() {
+  setTimeout(function() {
+
+        // Check if the URL has the container ID fragment
+        if (window.location.hash === '#mycontainer') {
+          // Add a delay before executing the code
+          var x = document.getElementById("mycontainer")
+          console.log(x)
+            x.scrollIntoView({ behavior: 'smooth' });
+          }
+        }, 300); // Delay of 1.1 seconds (1100 milliseconds)
+      }
+    );
+    
+  </script>
+
+
   </body>
 </html>
